[package]
name = "cow-quote"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"]}
eyre = "0.6"
hex = "0.4"
futures = "0.3"
serde = "1.0.215"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.54.0"
getset = "0.1.3"
