[package]
name = "cow-quote"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"]}
eyre = "0.6"
hex = "0.4"
futures = "0.3"
serde = "1.0.215"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.54.0"
getset = "0.1.3"
openssl = { version = "0.10", features = ["vendored"] }
dotenv = "0.15.0"
aws-sdk-ec2 = "1.95.0"
axum = "0.7.9"
tower-http = { version = "0.6.2", features = ["cors"] }

[profile.dev]
incremental = true
codegen-units = 16 
lto = false

[profile.release]
lto = true 

[[bin]]
name = "cow-quote"
path = "src/main.rs"
